Alteração de Nomenclatura

--- a/src/introducao/Views/Shared/_Layout.cshtml
+++ b/src/introducao/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
             Nova lista
             @await Component.InvokeAsync("Paises")
 
-            <p>&copy; 2018 - ASP NET CORE 2.0 - Usando VS2015</p>
+            <p>&copy; 2018 - ASP NET CORE 2.0 - Usando VS2015 By Anderson V. Bellini</p>
         </footer>
     </div>
 
